docs: update rpc path to options/local

--- a/MANUAL.html
+++ b/MANUAL.html
@@ -9968,7 +9968,7 @@ rclone rc mount/mount fs=TestDrive: mountPoint=/mnt/tmp vfsOpt=&#39;{&quot;Cache
 <li>all are included if this is missing or ""</li>
 </ul></li>
 </ul>
-<p>Note that these are the global options which are unaffected by use of the _config and _filter parameters. If you wish to read the parameters set in _config then use options/config and for _filter use options/filter.</p>
+<p>Note that these are the global options which are unaffected by use of the _config and _filter parameters. If you wish to read the parameters set in _config then use options/local and for _filter use options/filter.</p>
 <p>This shows the internal names of the option within rclone which should map to the external options very easily with a few exceptions.</p>
 <h3 id="options-info">options/info: Get info about all the global options</h3>
 <p>Returns an object where keys are option block names and values are an array of objects with info about each options.</p>
